--- a/14주차.md
+++ b/14주차.md
@@ -3,6 +3,7 @@
 - 제네릭 사용법
 - 제네릭 주요 개념 (바운디드 타입, 와일드 카드)
 - 제네릭 메소드 만들기
+- Raw Type
 - Erasure
 
 -------------------------------------------------------------------------
@@ -41,8 +42,6 @@
 제네릭 타입은 클래스와 메서드에 선언할 수 있는데, 먼저 클래스에 선언하는 제네릭 타입이다.
 
 예를들어 클래스 Box가 다음과 같이 정의되어 있다고 가정하자.
-
-
 
 
 
@@ -398,6 +397,349 @@ class FruitBox<T extends Fruit> extends Box<T> {}
 
 
 
+### 3. 제네릭 메소드 만들기
+
+
+
+메서드 선언부에 제네릭 타입이 선언된 메서드를 제네릭 메서드라 한다. Collections.sort()가 바로 제네릭 메서드이며, 제네릭 타입의 선언 위치는 반환 타입 바로 앞이다. 
+
+
+
+```
+static <T> void sort(List<T> list, Comparator<? super T> c)
+```
+
+
+
+제네릭 클래스에 정의된 타입 매개변수와 제네릭 메서드에 정의된 타입 매개변수는 전혀 별개의 것이다.
+
+같은 타입 문자 T를 사용해도 같은 것이 아니라는 것에 주의해야 한다.
+
+
+
+
+
+```
+//제네릭 메서드는 제네릭 클래스가 아닌 클래스에도 정의될 수 있다.
+class FruitBox<T> {
+	...
+	static <T> void sort(List<T> list, Comparator<? suprt T> c){
+		...
+	}
+}
+```
+
+
+
+위의 코드에서 제네릭 클래스 FruitBox에 선언된 타입 매개변수 T와 제네릭 메서드 sort()에 선언된 타입 매개변수 T는 타입 문자만 같을 뿐 서로 다른 것이다.
+
+그리고 sort()가 static 메서드라는 것에 주목하자. 앞서 설명한 것처럼, static 멤버에는 타입 매개변수를 사용할 수 없지만, 이처럼 메서드에 제네릭 타입을 선언하고 사용하는 것은 가능하다.
+
+
+
+메서드에 선언된 제네릭 타입은 지역 변수를 선언한 것과 같다고 생각하면 이해하기 쉬운데, 이 타입 매개변수는 메서드 내에서만 지역적으로 사용될 것이므로 메서드가 static이건 아니건 상관이 없다.
+
+
+
+앞서 나왔던 makeJuice()를 제네릭 메서드로 바꾸면 다음과 같다.
+
+```
+static <T extends Fruit> Juice makeJuice(FruitBox<T> box){
+	String tmp = "";
+	for(Fruit f : box.getList()) tmp += f +"";
+	return new Juice(tmp);
+}
+```
+
+
+
+이제 이 메서드를 호출할 때는 아래와 같이 타입 변수에 타입을 대입해야 한다.
+
+
+
+```
+FruitBox<Fruit> fruitBox = new FruitBox<Fruit>();
+FruitBox<Apple> appleBox = new FruitBox<Apple>();
+...
+System.out.println(Juice.<Fruit>makeJuice(fruitBox));
+System.out.println(Juice.<Apple>makeJuice(appleBox));
+```
+
+
+
+그러나 대부분의 경우 컴파일러가 타입을 추정할 수 있기 때문에 생략해도 된다. 위의 코드에서도 fruitBox와 appleBox의 선언부를 통해 대입된 타입을 컴파일러가 추정할 수 있다.
+
+
+
+```
+System.out.println(Juice.makeJuice(fruitBox)); //대입된 타입을 생략할 수 있다.
+System.out.println(Juice.makeJuice(appleBox));
+```
+
+
+
+한가지 주의할 점은 제네릭 메서드를 호출할때, 대입된 타입을 생략할 수 없는 경우에는 참조변수나 클래스 이름을 생략할 수 없다는 것이다.
+
+
+
+```
+System.out.println(<Fruit>makeJuice(fruitBox)); //에러. 클래스 이름 생략불가
+System.out.println(this.<Fruit>makeJuice(fruitBox));
+System.out.println(Juice.<Fruit>makeJuice(fruitBox));
+```
+
+
+
+같은 클래스 내에 있는 멤버들끼리는 참조변수나 클래스이름, 즉 'this'이나 '클래스이름'을 생략하고 메서드 이름만으로 호출이 가능하지만,
+
+대입된 타입이 있을때는 반드시 써줘야 한다.
+
+
+
+제네릭 메서드는 매개변수의 타입이 복잡할 때도 유용하다. 만일 아래와 같은 코드가 있다면 타입별로 선언함으로써 코드를 간략히 할 수 있다.
+
+
+
+```
+public static void printAll(ArrayList<? extends Product> list, 
+							ArrayList<? extends Product> list2 ){
+								for(Unit u : list){
+									System.out.println(u);
+								}
+							}
+```
+
+에서
+
+```
+public static <T extends Product> void printAll(ArrayList<T> list, ArrayList<T> list2){
+	for(Unit u : list){
+		System.out.println(u);
+	}
+}
+```
+
+
+
+
+
+### 4. 자바의 제네릭과 로타입( Raw Type )
+
+
+
+```
+public class<T> Example{
+	private T member;
+}
+```
+
+
+
+위와 같이 클래스 및 인터페이스 선언에 타입 매개변수 `T` 가 사용되면 제네릭 클래스, 제네릭 인터페이스라고 말하는데, 이때 사용된 이 클래스 `Example<T>` 를 제네릭 타입이라고 이야기 한다.
+
+
+
+제네릭을 사용하면 Raw Type이라는 개념이 나오는데, 로타입은 제네릭 타입에서 타입 매개변수를 전혀 사용하지 않았을 때를 의미한다. 즉, 위 제네릭 타입`Example<T>`를 `Example`로만 선언하여 사용했을 경우를 말한다.
+
+
+
+```
+public class Example<T> {
+	private T member;
+	
+	public Example(T member) {
+		this.member = member;
+	}
+	
+	public static void main(String[] args){
+		Example<Integer> parameterType = new Example<>(1);
+		Integer parameterTypeMember = parameterType.member;
+		System.out.println(parameterTypeMember);
+		
+		Example rawType = new Example(1);
+		Object rawTypeMember = rawType.member;
+		System.out.println(rawTypeMember);
+	}
+}
+```
+
+
+
+위 코드는 제네릭 파라미터 타입과 로타입을 사용한 경우이다. **하지만 로타입은 사용하지말자.**
+
+
+
+제네릭의 장점은 컴파일 타임에 타입에 대한 안정성을 보장받을 수 있다는 점이다. 제네릭 타입으로 선언한 변수는 컴파일 타임에 타입체크를 하기 때문에 런타임에서 `ClassCastException` 과 같은 UncheckedException을 보장 받을 수 있다.
+
+
+
+반면 아래와 같이 로타입으로 사용될 경우에는 제네릭을 사용했을 때의 안정성과 표현력이라는 장점을 발휘할 수 없기 때문에, IDE 에서도 `"Raw use of parameterized class 'Example' "` 라는 경고를 주는 것을 볼 수 있다.
+
+
+
+로타입이 나오게 된 이유는 제네릭의 특징인 소거(Erasure)와 관련이 있다.
+
+
+
+
+
+### 5. Erasure
+
+
+
+제네릭 타입 이레이져란 ? 
+
+소거란 원소 타입을 컴파일 타입에만 검사하고 런타임에는 해당 타입 정보를 알 수 없는 것입니다.
+
+한마디로, 컴파일 타임에만 타입 제약 조건을 정의하고, 런타임에는 타입을 제거한다는 뜻입니다.
+
+
+
+Java 컴파일러의 타입 소거
+
+* unbounded Type(<?>, <T>) 는 Object로 변환합니다.
+* bound type(<E extends Comparable>)의 경우에는 Object가 아닌 Comparable로 변환합니다.
+* 제네릭 타입을 사용할 수 있는 일반 클래스, 인터페이스, 메소드에만 소거 규칙을 적용합니다.
+* 타입 안정성 보존을 위해 필요하다면 type casting을 넣습니다.
+* 확장된 제네릭 타입에서 다형성을 보존하기 위해 bridge method를 생성합니다.
+
+
+
+
+
+예제를 보겠습니다.
+
+unbouned type
+
+```
+// 컴파일 할 때 (타입 소거 전) 
+public class Test<T> {
+    public void test(T test) {
+        System.out.println(test.toString());
+    }
+}
+```
+
+
+
+```
+// 런타임 때 (타입 소거 후)
+public class Test {
+    public void test(Object test) {
+        System.out.println(test.toString());
+    }
+}
+```
+
+
+
+unbouned type에 대해서는 위와 같이 Object로 바꾸게 됩니다.
+
+
+
+
+
+
+
+bound type
+
+```
+public class Test<T extends Comparable<T>> {
+	private T data;
+	
+	public T getData() {
+		return data;
+	}
+	
+	public void setData(T data){
+		this.data = data;
+	}
+}
+```
+
+
+
+```
+public class Test{
+	private Comparable data;
+	
+	public Comparable getData(){
+		return data;
+	}
+	
+	public void setData(Comparable data){
+		this.data = data;
+	}
+}
+```
+
+
+
+bound type에 대해서는 Object가 아닌 한정시킨 타입으로 변환이 됩니다. 그리고 세 번째 규칙이 있습니다.
+
+세 번째 규칙은 자바 컴파일러가 제네릭의 타입 안정성을 위해 bridge method도 만들어 낼 수 있다는 것입니다.
+
+
+
+```
+public class MyComparator implements Comparator<Integer> {
+	public int compare(Integer a, Integer b){
+		//
+	}
+}
+```
+
+
+
+런타임에는 코드가 다음과 같이 변합니다.
+
+
+
+```
+public class MyComparator implements Comparator{
+	public int compare(Integer a, Integer b){
+		//
+	}
+}
+```
+
+
+
+소거된 상태로 변할것이고, Comparator의 compare 메소드의 매개변수 타입은 Object로 바뀔 것입니다.
+
+java 컴파일러는 제네릭의 타입 안정성을 위해 Bridge Method도 만들어낼 수 있다. Bridge Mothod는 java 컴파일러가 컴파일 할 때 메서드 시그니처가 조금 다르거나 애매할 경우에 대비하여 작성된 메서드 이다.
+
+이 경우는 파라미터화된 클래스나 인터페이스를 확장한 클래스를 컴파일 할 때 생길 수 있다.
+
+
+
+
+
+```
+public class MyComparator implements Comparator<Integer> {
+   public int compare(Integer a, Integer b) {
+      //
+   }
+
+   //THIS is a "bridge method"
+   public int compare(Object a, Object b) {
+      return compare((Integer)a, (Integer)b);
+   }
+}
+```
+
+
+
+그러면 매개변수가 Integer 타입의 compare 메소드를 사용할 수 있게 됩니다.
+
+
+
+
+
+
+
+
+
 
 
 참고 문헌 
@@ -407,3 +749,7 @@ class FruitBox<T extends Fruit> extends Box<T> {}
 JAVA의 정석
 
 참조: https://sthwin.tistory.com/22
+
+참조: https://devlog-wjdrbs96.tistory.com/263
+
+참조: https://javabom.tistory.com/69
