--- a/15주차.md
+++ b/15주차.md
@@ -452,6 +452,172 @@ MyFunction myMethod() {
 
 
 
+## 3. Variable Capture
+
+
+
+람다 표현식에서는 익명 함수에서와 마찬가지로, *외부에서 정의된 변수를 활용 할 수 있다.*
+
+
+
+**즉, 람다 표현식에서는 인스턴스 변수, 정적 변수등을 자유롭게 body에서 참조하여 사용할 수 있다.**
+
+하지만 지역 변수를 사용하기 위해서는 지역 변수가 반드시 final 로 선언되어 있어야 한다는 제약 조건이 있다.
+
+
+
+```
+Supplier<Integer> incrementer(int start) { 
+	return () -> start++; 
+}
+
+//결과는 컴파일 에러
+```
+
+
+
+#### 왜 final 제약 조건을 걸어 두었을까?
+
+
+
+인스턴스 변수는 heap영역에 저장이 되고, 지역 변수는 statck 영역에 위치한다.
+
+
+
+이런 상황에서 람다가 스레드에서 실행된 후, 변수를 할당한 스레드가 사라져 stack 메모리에서 해제되었으나, 람다를 실행하는 스레드는 살아 있어 해당 변수에 접근을 요청할 케이스가 생긴다.
+
+
+
+이와 같은 이유로,
+
+실제 변수에 접근을 허용하는 것이 아닌 해당 변수의 복사본을 만들어 그 곳에 접근을 허용하는데 당연히 처음에 복사한 값과 원본의 값이 달라지면 안되기 때문에, 람다에서 접근하는 지역 변수는 final로 선언되어야 한다.
+
+
+
+다시말해 외부에 있는 지역변수(=자유변수) 의 복사본을 만들어 접근을 허용하도록 하게 했습니다. 
+
+이걸 람다 캡쳐링 (capturing lambda) 이라고 합니다.
+
+
+
+캡쳐링했으면 내 마음대로 변경해도 되는거 아냐?라고 할 수 있지만, 리턴된 람다식은 언제 몇 개의 스레드에서 사용될 지 모릅니다.
+
+그 때는 start 값이 '10'으로 복사되어 왔어도 11일지 12일지 그 이상일지를 모릅니다. 결과적으로 final로 처리되지 않으면 자유 변수 참조 값의 **동기(Sync)를 맞출 수가 없습니다.**
+
+
+
+그렇기 때문에 자유 변수를 캡쳐링했을 때는 final 또는 effectively final 변수를 이용해야합니다.
+
+
+
+그러면 같은 원리를 스태틱 변수와 인스턴스 변수에 적용해보도록 하겠습니다.
+
+
+
+```
+private int start = 0; 
+
+Supplier<Integer> incrementer() { 
+	return () -> start++; 
+}
+```
+
+
+
+위 코드는 정상적으로 컴파일되고 start의 경우 인스턴스 변수입니다.
+
+
+
+왜 이 경우는 문제가 없다고 판단할까요?
+
+
+
+인스턴스 변수는 자바 메모리 구조상 **힙 영역에 생성되기 때문에** 여러 스레드에서도 **동일한 변수를 참조할 수 있기 때문**입니다.
+
+그러면 컴파일러는 람다가 가장 최신의 start값(heap영역 안의 값)을 참조하도록 보장할 수 있습니다.
+
+
+
+
+
+## 4. 메소드 , 생성자 레퍼런스
+
+
+
+람다식을 충분히 간결하게 표현했다고 생각했는데 더 간결하게 표현할 수 있는 방법이 있다.
+
+항상 그런 것은 아니고, 람다식이 하나의 메서드만 호출하는 경우에는 '메서드 참조(method reference)' 라는 방법으로 람다식을 간략히 할 수 있다.
+
+
+
+예를 들어 문자열을 정수로 변환하는 람다식은 아래와 같이 작성 할 수 있다.
+
+
+
+```
+Function<String, Integer> f = (String s) -> Integer.parseInt(s);
+```
+
+
+
+보통은 이렇게 람다식을 작성하는데, 메서드 레퍼런스를 사용하면 다음과 같다.
+
+
+
+```
+Function<String, Integer> f = Integer::paresInt; //메서드 참조
+```
+
+
+
+하나 더 예를 들어보자. 
+
+
+
+```
+BiFunction<String, String, Boolean> f = (s1, s2) -> s1.equals(s2);
+
+BiFunction<String, String, Boolean> f = String::equals;  // 메서드 레퍼런스
+```
+
+
+
+매개변수 s1과 s2를 생략해버리고 나면 equals만 남는데, 두 개의 String을 받아서 Boolean을 반환하는 equals라는 이름의 메서드는 다른 클래스에도 존재할 수 있기 때문에 equals앞에 클래스 이름은 반드시 필요하다.
+
+
+
+메서드 참조를 사용할 수 있는 경우가 한 가지 더 있는데, 이미 생성된 객체의 메서드를 람다식에서 사용한 경우에는 클래스 이름 대신 그 객체의 참조 변수를 적어줘야 한다.
+
+
+
+```
+MyClass obj = new MyClass();
+Function<String, Boolean> f = (x) -> obj.equals(x); //람다식
+Function<String, Boolean> f2 = obj::equals //메서드 참조
+```
+
+
+
+지금 까지 내용을 정리하면 다음과 같다.
+
+| 종류                           | 람다                       | 메서드 참조       |
+| ------------------------------ | -------------------------- | ----------------- |
+| static 메서드 참조             | (x) -> ClassName.method(x) | ClassName::method |
+| 인스턴스 메서드 참조           | (obj, x) -> obj.method(x)  | ClassName::method |
+| 특정 객체 인스턴스 메서드 참조 | (x) -> obj.method(x)       | obj::method       |
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -462,3 +628,6 @@ MyFunction myMethod() {
 
 JAVA의 정석
 
+출처: https://feco.tistory.com/64 [wmJun]
+
+출처: https://jeong-pro.tistory.com/211 [기본기를 쌓는 정아마추어 코딩블로그]
